simplify and fix dark mode

--- a/globalStyles.css
+++ b/globalStyles.css
@@ -8,5 +8,5 @@ body > div {
 }
 
 * {
-  transition: background-color 400ms, opacity 200ms, color 300ms;
+  transition: opacity 200ms;
 }
